packages/typ/tests/fixtures/diagnostics/0012_core_box_payload_mismatch_01.ml.expected
File "0012_core_box_payload_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0012_core_box_payload_mismatch_01 is not a valid module name.

File "0012_core_box_payload_mismatch_01.ml", line 2, characters 22-26:
2 | let _ : int box = Box true
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
